# elliotshoney

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  env_template.txt  honeypot_decorator.py  main.py  pyproject.toml
agent/: __init__.py  protected_agent.py  react_agent.py  v_agent.py  vector_db.py  vulnerable_agent.py
decorators/: README_LOGGING.md  __init__.py  honeypot_decorator.py  honeypot_logger.py  honeypot_node_decorator.py  query_logs.py
honeypot/: honeypot.py
tools/: __init__.py  notion_mcp_tool.py  sql_tool.py
